# study-drift-lms

./: .env.local.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  Makefile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
server/: .air.toml  .dockerignore  .env.example  .golangci.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  coverage.out  deny.toml  docker-compose.yml  docker-entrypoint.dev.sh  go.mod  go.sum
server/.cargo/: audit.toml
server/cmd/bootstrap-admin/: main.go
server/cmd/hydrate-welcome-course/: main.go
server/cmd/migrate-question-bank/: main.go
server/cmd/server/: main.go
server/internal/apierr/: apierr.go  problem.go  problem_test.go
server/internal/app/: app.go  app_test.go
server/internal/auth/: http.go  http_test.go  jwt.go  jwt_test.go  password.go
server/internal/authz/: authz.go  authz_test.go
server/internal/background/: email_worker.go  grade_sweep.go  periodic.go  push_worker.go  tus_cleanup.go
server/internal/browsersaml/: acs.go  map_assertion.go  spconfig.go
server/internal/commevents/: commevents_test.go
server/internal/config/: config.go  config_test.go
server/internal/courseroles/: courseroles.go  courseroles_test.go
server/internal/db/: pool_test.go
server/internal/deviceua/: label.go  label_test.go
server/internal/geoip/: lookup.go  lookup_test.go
server/internal/gradingdisplay/: conversion.go  conversion_test.go
server/internal/gradingdrops/: drops.go  drops_test.go
server/internal/httpserver/: accommodations.go  admin.go  admin_db_test.go  admin_org_units.go  admin_orgs.go  admin_password_policy.go  assignment_markups.go  auth.go  auth_cli.go  auth_db_test.go  auth_nodb_test.go  canvas_agent_debug_log.go  canvas_grade_import.go  canvas_import_ws.go  canvas_import_ws_test.go  canvas_quiz_import.go  clever_routes.go  collab_docs_db_test.go  collab_docs_http.go  collab_docs_ws.go  communication.go  communication_nodb_test.go  concepts_http.go  content_page_markups.go  cors_test.go  course_archived.go  course_blueprint.go  course_blueprint_db_test.go  course_context.go  course_context_db_test.go  course_enrollments_http.go  course_factory_reset.go  course_features.go  course_file_content.go  course_file_nodb_test.go  course_file_upload.go  course_get.go  course_get_db_test.go  course_ical.go  course_markdown_theme.go  (+108 more)
server/internal/lti/: idtoken.go  idtoken_test.go  keys.go  keys_test.go  runtime.go
server/internal/mail/: magic_link.go  magic_link_test.go  password_reset.go  password_reset_test.go  send.go  smtp_paths_test.go  templates.go  templates_test.go
server/migrations/: 001_users.sql  005_course_code_only.sql  007_course_enrollments.sql  009_user_app_roles.sql  027_course_grading.sql  031_platform_inbox_sender.sql  032_user_profile_fields.sql  033_module_quizzes.sql  033_ui_theme.sql  036_settings_system_prompts.sql  041_course_enrollments_user_role_unique.sql  052_course_files.sql  059_course_gradebook_view_permission.sql  062_user_audit_structure_item_on_delete_cascade.sql  063_module_assignment_delivery_settings.sql  064_course_feed.sql  068_password_reset_tokens.sql  068_quiz_attempts.sql  069_quiz_attempts_responses.sql  072_course_learning_outcomes.sql  073_course_feature_flags.sql  074_course_outcome_link_levels.sql  081_question_versioning_backfill_published.sql  091_spaced_repetition.sql  093_diagnostic_placement.sql  098_module_assignment_submissions.sql  099_submission_annotations.sql  100_competency_courses.sql  101_qti_common_cartridge_import.sql  104_moderated_grading.sql  116_course_enrollment_roles_catalog.sql  117_oneroster_provisioning.sql  119_password_policy.sql  120_clever_classlink.sql  120_clever_classlink_sso.sql  121_oidc_providers_clever_classlink.sql  122_k12_user_connected_via.sql  122_scim_provisioning.sql  123_mfa_totp_webauthn.sql  124_magic_link_tokens.sql  (+31 more)
server/scripts/: gen_stubs.py  print_sqlx_checksum_update.py
server/src/: app.rs  authz.rs  config.rs  error.rs  http_auth.rs  jwt.rs  lib.rs  lti_keys.rs  main.rs  openapi.rs  state.rs
server/test/: e2e_smoke_test.go  storage_e2e_test.go
server/tests/: http_acceptance.rs  http_quiz_flow.rs
(+2477 files in other folders)
