[package]
name = "study_drift_server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
htmd = "0.5.4"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
password-hash = "0.5"
rand = "0.9.3"
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "chrono",
    "json",
    "migrate",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
serial_test = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
wiremock = "0.6"

[package.metadata.cargo-llvm-cov]
# Thin binary entrypoint; behavior is covered via `lib` + integration tests.
exclude = ["src/main.rs"]
